kubernetes/media/sonarr/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: sonarr
spec:
  serviceName: sonarr
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: sonarr
        image: ghcr.io/home-operations/sonarr:4.0.16
        livenessProbe:
          httpGet:
            path: /ping
            port: 8989
          initialDelaySeconds: 30
          timeoutSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
