kubernetes/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  clusterIP: None
  selector:
    app: sonarr
  ports:
  - port: 80
    targetPort: 8989
