kubernetes/media/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
  - name: envoy
    namespace: envoy-gateway
  hostnames:
  - sonarr.cecobask.com
  rules:
  - backendRefs:
    - name: sonarr
      port: 80
